# somd2

./: .gitignore  CHANGELOG.md  README.md  environment.yaml  environment_macos.yaml  pixi.toml  pyproject.toml  test_conf.py
.github/workflows/: devel.yaml  main.yaml  pr.yaml
actions/: update_recipe.py  upload_package.py
demo/: bubble_tyk2.ipynb  first_example.ipynb  lambda_schedule.ipynb  repex.ipynb  sire_restraints.ipynb
recipes/somd2/: conda_build_config.yaml  recipe.yaml  template.yaml
scripts/: Atoms_finding_sire_test.ipynb  addanchors.py  addanchors_exampleinputs.txt
src/somd2/: __init__.py
src/somd2/_utils/: __init__.py  _ghosts.py  _schedules.py  _somd1.py
src/somd2/analysis/: _analyse.py
src/somd2/app/: __init__.py  _cli.py  run.py
src/somd2/config/: __init__.py  _config.py
src/somd2/io/: __init__.py  _io.py
src/somd2/log/: __init__.py  _log.py
src/somd2/runner/: __init__.py  _base.py  _dynamics.py  _repex.py  _run_single_pert.py  _runner.py  _sire_merge_runsim.py  _somd1.py  _terminal_flip.py
src/somd2/runner/_samplers/: __init__.py  _terminal_flip.py
src/somd2/tests/: test_settings.py
tests/: conftest.py
tests/_utils/: test_ghosts.py  test_somd1.py
tests/inputs/: backward.pert  forward.pert
tests/io/: test_io.py
tests/runner/: test_alchemical_ions.py  test_config.py  test_hmr.py  test_lambda_values.py  test_remainder.py  test_repex.py  test_restart.py  test_settings.py  test_terminal_flip.py
tests/schedules/: test_ring_break.py
