[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "somd2"
authors = [
    { name = "Matthew Burman", email = "matthew@openbiosim.org" },
    { name = "Lester Hedges", email = "lester@openbiosim.org" },
    { name = "Christopher Woods", email = "christopher@openbiosim.org" },
    { name = "Julien Michel", email = "julien@openbiosim.org" },
]
description = "An open-source engine for alchemical free-energy calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
dynamic = ["version"]

[tool.setuptools]
license-files = ["LICENSE"]

[project.scripts]
somd2 = "somd2.app:somd2"

[project.urls]
repository = "https://github.com/OpenBioSim/somd2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/somd2/_version.py"
